nav-bar-collapse-problem is solved

--- a/ppmtool-react-client/src/App.css
+++ b/ppmtool-react-client/src/App.css
@@ -122,19 +122,3 @@ svg path,
 svg rect {
   fill: #ff6700;
 }
-
-@media screen and (max-width: 600px) {
-  .responsive {
-    position: relative;
-  }
-  .responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
